modules/nixos/k8s/example-application.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guestbook
  namespace: guestbook
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`guestbook.derviloper.de`)
      services:
        - name: guestbook
          port: 80
  tls:
    certResolver: le
